--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package.json",
+  "name": "react-native-pay”,
   "version": "1.0.0",
   "description": "pay",
   "main": "index.ios.js",
